# vision-iot-pi5

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-train.txt
.github/workflows/: ci.yml
apps/pi_detector/: config.yaml  infer_onnx.py  main.py  mqtt_client.py  utils.py
apps/sensors/: dht22.py  pir.py
apps/streamlit_dashboard/: Home.py
apps/streamlit_dashboard/pages/: 01_Metrics.py  02_History.py
apps/tools/: capture_dataset.py  check_camera.py
deploy/scripts/: install_pi.sh  run_all.sh
deploy/systemd/: pi-detector.service  streamlit.service
docs/: INDUSTRIAL_NOTES.md
tests/: test_perf.py
training/: data.yaml
